--- a/personal/contact.html
+++ b/personal/contact.html
@@ -7,12 +7,19 @@
   </head>
   <body>
     <h1>Contact Me</h1>
-    <p>Tel:</p>
-    <p>Email: andomaria@windowslive.com</p>
-    <p>Address:</p>
+    <p>
+      📱 Tel:
+      <a href="tel:+306933333333">+306933333333</a>
+    </p>
+    <p>
+      📧 Email:
+      <a href="mailo: andomaria@windowslive.com">andomaria@windowslive.com</a>
+    </p>
+    <p>🏠 Address:</p>
     <p>
       Athens<br />
       Greece <br />
     </p>
   </body>
 </html>
+
