--- a/index.html
+++ b/index.html
@@ -102,15 +102,28 @@
       <li>Problem Solving</li>
     </ul>
 
+    <!-- PROJECTS-->
+    <h2>Projects</h2>
+    <ul>
+      <li>
+        HTML Portfolio – Created as part of The Complete Web Development
+        Bootcamp (Udemy, Angela Yu). A simple portfolio website built with HTML,
+        showcasing sections such as About Me, and Hobbies.<br />
+        🔗
+        <a href="../4.3 HTML Porfolio Project/index.html">View Project</a>
+      </li>
+    </ul>
+
     <!--HOBBIES-->
-    <h3>
-      <a href="./personal/hobbies.html">Hobbies</a>
-      <a href="./personal/contact.html">Contact</a>
-    </h3>
+    <h2>Other</h2>
+    <ul>
+      <li><a href="./personal/hobbies.html">Hobbies</a></li>
+      <li><a href="./personal/contact.html">Contact</a></li>
+    </ul>
 
     <!--FOOTER-->
     <footer>
-      <p>© 2025 Antoniadou Maria. All rights reserved.</p>
+      <p>&copy; 2025 Antoniadou Maria. All rights reserved.</p>
     </footer>
   </body>
 </html>
